Revert "Fix 3D model oversizing on iPhone 11 Pro with CSS positioning"
This reverts commit 621416b57f34cf8978355e6b7d956b024379c1f9.

--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,6 @@ body {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    position: relative;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -409,14 +408,9 @@ body {
 }
 
 .business-card #model-canvas {
-    width: 100% !important;
-    height: 100% !important;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
     image-rendering: -webkit-optimize-contrast;
     image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
